--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mongoose": "^8.11.0"
+    "express": "^4.21.2"
   }
 }
